# mds

./: mds.cabal  mds.conf  stack.yaml
app/: Main.hs
src/ATrade/MDS/: Database.hs  HistoryServer.hs  Protocol.hs
src/ATrade/Quotes/: Finam.hs
test/: Spec.hs
test/Integration/: Database.hs  Spec.hs
