name:                mds
version:             0.1.0.0
synopsis:            Market data storage
description:         Please see README.md
homepage:            https://github.com/asakul/mds
license:             BSD3
license-file:        LICENSE
author:              Denis Tereshkin
maintainer:          denis@kasan.ws
copyright:           2016 Denis Tereshkin
category:            Trading
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ATrade.MDS.Database
  build-depends:       base >= 4.7 && < 5
                     , HDBC
                     , HDBC-postgresql
                     , configurator
                     , text
                     , vector
                     , libatrade
                     , hslogger
                     , time
                     , monad-loops
  default-language:    Haskell2010

executable mds-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mds
  default-language:    Haskell2010

test-suite mds-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mds
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/asakul/mds
