name:                mds
version:             0.1.0.0
synopsis:            Market data storage
description:         Please see README.md
homepage:            https://github.com/asakul/mds
license:             BSD3
license-file:        LICENSE
author:              Denis Tereshkin
maintainer:          denis@kasan.ws
copyright:           2016 Denis Tereshkin
category:            Trading
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror
  exposed-modules:     ATrade.MDS.Database
                     , ATrade.MDS.HistoryServer
  build-depends:       base >= 4.7 && < 5
                     , HDBC
                     , HDBC-sqlite3
                     , configurator
                     , text
                     , vector
                     , libatrade
                     , hslogger
                     , time
                     , monad-loops
                     , text-format
                     , zeromq4-haskell
                     , aeson
                     , safe
                     , bytestring
                     , attoparsec
                     , binary
                     , binary-ieee754
                     , conduit
  default-language:    Haskell2010
  other-modules:       ATrade.MDS.Protocol
  default-extensions:  OverloadedStrings

executable mds-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , mds
                     , aeson
                     , text
                     , bytestring
                     , hslogger
                     , zeromq4-haskell
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite mds-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mds
                     , libatrade
                     , temporary
                     , datetime
                     , vector
                     , text
                     , time
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Integration.Spec
                     , Integration.Database
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/asakul/mds
